# openapi.yaml
@@ -905,6 +905,27 @@ paths:
               schema:
                 $ref: '#/components/schemas/SparePart'
 
+  /spare-parts-active:
+    get:
+      tags: [ spare_part ]
+      summary: List or search active spare parts
+      parameters:
+        - in: query
+          name: name
+          required: false
+          schema:
+            type: string
+          description: If provided, filters spare parts by partial name match
+      responses:
+        '200':
+          description: List of active spare parts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SparePart'
+
   /spare-parts/{id}:
     get:
       tags: [ spare_part ]
@@ -1339,6 +1360,10 @@ components:
         nettoSellingPrice:
           type: integer
           example: 1800
+        status:
+          type: boolean
+          example: "1"
+
     Defect:
       type: object
       properties:
